# Multiformat-Converter-CLI

./: GETTING_STARTED.md  INDEX.md  PROJECT_REPORT.txt  README.md  base.py  batch.py  check_imports.py  cli.py  csv_json.py  fixtures_sample.md  markdown_converter.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run_all.py  run_all_tests.py  run_test_session.py  setup_dirs.py  test_batch.py  test_cli.py  test_csv_json.py  test_errors.py  test_markdown.py  test_utils.py
converter/: __init__.py  cli.py  csv_json.py  markdown_converter.py  utils.py
reports/: COMPLETION_REPORT.txt  PROJECT_COMPLETION_SUMMARY.txt  SPRINT_1_SUMMARY.txt  SPRINT_2_SUMMARY.txt
scripts/: quick_test.py  run_all_tests.py  run_tests.bat
tests/: __init__.py  test_batch.py  test_cli.py  test_csv_json.py  test_errors.py  test_markdown.py  test_utils.py
